--- a/app/templates/environment/admin.add.twig
+++ b/app/templates/environment/admin.add.twig
@@ -21,13 +21,13 @@
                 </li>
             </ul>
 
-            {# primary action #}
-            <input class="btn" type="submit" value="Add Environment">
+            <div>
+                {# primary action #}
+                <input class="btn--action" type="submit" value="Add Environment">
 
-            {# secondary actions #}
-            <p>
-                <a href="{{ urlFor('environments') }}">Cancel</a>
-            </p>
+                {# secondary actions #}
+                <a class="btn secondary-action" href="{{ urlFor('environments') }}">Cancel</a>
+            </div>
         </form>
     </div>
 {% endblock %}
