--- a/app/templates/repository/admin.add.twig
+++ b/app/templates/repository/admin.add.twig
@@ -62,13 +62,13 @@
                 </li>
             </ul>
 
-            {# primary action #}
-            <input class="btn" type="submit" value="Add Repository">
+            <div>
+                {# primary action #}
+                <input class="btn--action" type="submit" value="Add Repository">
 
-            {# secondary actions #}
-            <p>
-                <a href="{{ urlFor('repositories') }}">Cancel</a>
-            </p>
+                {# secondary actions #}
+                <a class="btn secondary-action" href="{{ urlFor('repositories') }}">Cancel</a>
+            </div>
         </form>
     </div>
 {% endblock %}
