--- a/app/templates/group/group.twig
+++ b/app/templates/group/group.twig
@@ -9,48 +9,48 @@
     <p>{{ group.key }}</p>
 
     <h3>Repositories</h3>
-    <ul>
-        {% if repos %}
 
-            <table>
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Github Source</th>
-                        <th>Notification E-mail</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                {% for repo in repos %}
-                    <tr>
-                        <td><a href="{{ urlFor('repository', {'id': repo.id}) }}">{{ repo.key }}</a></td>
-                        <td>
-                            <a href="{{ githubRepo(repo.githubUser, repo.githubRepo) }}">{{ repo.githubUser }}/{{ repo.githubRepo }}</a>
-                            <span class="icon">
-                                <svg viewBox="0 0 32 32">
-                                    <use xlink:href="#github"></use>
-                                </svg>
-                            </span>
-                        </td>
-                        <td>{{ repo.email }}</td>
-                        <td>
-                            <a href="{{ urlFor('repository.status', {'id': repo.id}) }}">Status</a>
-                        </td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
+    {% if repos %}
 
-        {% else %}
-            <p>
-                There are no repositories associated with this group.
-                {% if isAdmin %}
-                    <br><a href="{{ urlFor('repository.admin.add') }}">Add a repository</a>
-                {% endif %}
-            </p>
-        {% endif %}
-    </ul>
+        <table>
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Github Source</th>
+                    <th>Notification E-mail</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for repo in repos %}
+                <tr>
+                    <td><a href="{{ urlFor('repository.status', {'id': repo.id}) }}">{{ repo.key }}</a></td>
+                    <td>
+                        <a href="{{ githubRepo(repo.githubUser, repo.githubRepo) }}">{{ repo.githubUser }}/{{ repo.githubRepo }}</a>
+                        <span class="icon">
+                            <svg viewBox="0 0 32 32">
+                                <use xlink:href="#github"></use>
+                            </svg>
+                        </span>
+                    </td>
+                    <td>{{ repo.email }}</td>
+                    <td>
+                        <a href="{{ urlFor('repository', {'id': repo.id}) }}">Details</a>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+
+    {% else %}
+        <p>
+            There are no repositories associated with this group.
+            {% if isAdmin %}
+                <br><a href="{{ urlFor('repository.admin.add') }}">Add a repository</a>
+            {% endif %}
+        </p>
+    {% endif %}
+
 
     {% if isAdmin and repos %}
         <p><strong>Note:</strong> All associated repositories must be removed or transferred to remove this group.</p>
