--- a/sass/style.scss
+++ b/sass/style.scss
@@ -48,5 +48,7 @@
 @import "partials/base/error";
 @import "partials/patterns/nav";
 @import "partials/patterns/buttons";
+@import "partials/patterns/block-list";
 @import "partials/patterns/alert-bar";
+@import "partials/patterns/choice-list";
 @import "partials/patterns/terminal";
