--- a/sass/partials/_global.scss
+++ b/sass/partials/_global.scss
@@ -66,7 +66,7 @@ html {
     }
 }
 
-p {
+main > p {
     max-width: 40em;
 }
 
@@ -83,16 +83,6 @@ p {
         padding: 0 ms(1);
         @include rhythm(0,1,.05,0);
     }
-}
-
-.form-wrapper {
-    @include breakpoint(37.125em) {
-        max-width: 28em;
-    }
-}
-
-.deployment-form {
-    clear: right;
 }
 
 .mbn {
