--- a/sass/partials/patterns/_buttons.scss
+++ b/sass/partials/patterns/_buttons.scss
@@ -29,6 +29,18 @@
     }
 }
 
+.btn--destructive {
+    background-color: $error-color;
+    border: 1px solid shade($error-color, 20%);
+    text-align: center;
+
+    box-shadow: 0 -1px 0 rgba(255, 255, 255, .1) inset, 0 4px 0 shade($error-color,20%), 0 4px 2px rgba(0, 0, 0, .5);
+
+    &:hover {
+        background-color: tint($error-color, 15%);
+    }
+}
+
 .btn--alt {
     float: right;
 }
