--- a/app/templates/environment/environment.twig
+++ b/app/templates/environment/environment.twig
@@ -25,7 +25,7 @@
         {% if isAdmin %}
             {# secondary actions #}
             <a class="btn--action secondary-action" href="{{ urlFor('environment.admin.edit', {id: env.id}) }}">Edit</a>
-            {% if not servers %}
+            {% if not servers  and canUserDelete(currentUser) %}
                 <form class="secondary-action" action="{{ urlFor('environment.admin.remove.handle', {id: env.id}) }}" method="post">
                     <input class="btn--destructive" type="submit" value="Remove">
                 </form>
