--- a/app/templates/repository/repository.twig
+++ b/app/templates/repository/repository.twig
@@ -58,14 +58,23 @@
         {# secondary actions #}
         <a class="btn--action secondary-action" href="{{ urlFor('repository.admin.edit', {id: repository.id}) }}">Edit details</a>
 
-        {% if isAdmin and not deployments %}
+        {% if isAdmin and not deployments and canUserDelete(currentUser) %}
             <form class="secondary-action" action="{{ urlFor('repository.admin.remove.handle', {id: repository.id}) }}" method="post">
                 <input class="btn--destructive" type="submit" value="Remove repository">
             </form>
         {% endif %}
     </div>
 
-    <h3>Server deployments</h3>
+    <h3>Permissions</h3>
+    <ul>
+        {% for pair in permissions %}
+            <li><a href="{{ urlFor('user', {'id': pair.user.id}) }}">{{ pair.user.name }}</a> has permission to build and push to <b>{{ pair.environment.key }}</b>.</li>
+        {% else %}
+            <li>No permissions found for this repository.</li>
+        {% endfor %}
+    </ul>
+
+    <h3>Server deployments:</h3>
     {% if deployments %}
         <table class="t75">
             <thead>
